--- a/.gitignore
+++ b/.gitignore
@@ -1,67 +1,1 @@
-# Laravel
-/.phpunit.cache
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
-/storage/logs/*
-/storage/framework/cache/*
-/storage/framework/sessions/*
-/storage/framework/testing/*
-/storage/framework/views/*
-/storage/app/*
-/storage/debugbar/*
-/storage/storage/*
-/vendor
-.env
-.env.*
-.env.backup
-.env.production
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
-
-# IDE
-/.fleet
-/.idea
-/.vscode
-/.vs
-*.sublime-project
-*.sublime-workspace
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Arquivos de build
-*.zip
-*.rar
-*.tar
-*.tar.gz
-*.tgz
-
-# Arquivos grandes
-*.log
-*.sqlite
-*.sqlite3
-
-# Arquivos JS grandes que podem ser reconstruídos
-/public/js/filament/forms/components/*.js
-/public/js/filament/widgets/components/*.js
-/public/livewire/*.js
-
-# Arquivos de dependências
-composer.lock
-
-# Arquivos temporários
-*.swp
-*.swo
-*~
-
-# Exceção para arquivos SQL específicos
-!forms.sql
-!banks.sql
+node_modules
