Diagnósticos avançados e melhorias de configuração

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,31 +1,56 @@
 server {
-    listen 80;
-    server_name localhost;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+
+    # Nome do servidor
+    server_name _;
+
+    # Diretório raiz onde estão os arquivos do site
     root /var/www/html/public;
+
+    # Arquivo de índice padrão
     index index.php;
 
+    # Tamanho máximo do corpo das requisições
+    client_max_body_size 100M;
+
+    # Log de erros
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+
+    # Rota padrão
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # Configuração para arquivos PHP
     location ~ \.php$ {
-        # fastcgi_pass unix:/var/run/php/php-fpm.sock;
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+        fastcgi_busy_buffers_size 256k;
     }
 
+    # Negação de acesso a arquivos sensíveis
     location ~ /\.(?!well-known).* {
         deny all;
     }
 
-    # Configuração para servir arquivos estáticos
+    # Configuração para arquivos estáticos
     location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
         expires 5d;
     }
 
     # Configuração para gzip
     gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 }
